--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </div>
 
         <div id="map-wrapper">
-            <!-- Wczytujemy plik PNG zamiast uszkodzonego Base64 -->
-            <img id="map-image" src="mapa.png" alt="Mapa polityczna Europy">
+            <!-- Wczytujemy plik JPG  zamiast uszkodzonego Base64 -->
+            <img id="map-image" src="licensed-image.jpg" alt="Mapa polityczna Europy">
             <div id="marker-container"></div>
         </div>
         
